--- a/Desafios/desafio android d010/indeix.html
+++ b/Desafios/desafio android d010/indeix.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio Andorid</title>
+    <title>Desafio Android</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagens/faviconA.ico" type="image/x-icon">
 </head>
